--- a/src/app/common/components/app-prompt/app-prompt.component.html
+++ b/src/app/common/components/app-prompt/app-prompt.component.html
@@ -1,42 +1,42 @@
 <div [@fader]="state$ | async">
-  <div class="m-app-prompt__container">
-    <div class="m-app-prompt__header" (click)="onClick($event)">
+  <div class="m-appPrompt__container">
+    <div class="m-appPrompt__header" (click)="onClick($event)">
       <img
-        class="m-app-prompt__logo"
+        class="m-appPrompt__header__logo"
         [src]="cdnAssetsUrl + 'assets/logos/bulb.svg'"
       />
-      <span class="m-app-prompt__title">
+      <span class="m-appPrompt__header__title">
         Switch to App
       </span>
 
       <m-icon
         (click)="onClose($event)"
-        class="m-app-prompt__close-icon"
+        class="m-appPrompt__header__closeIcon"
         from="ion"
         iconId="close"
       ></m-icon>
     </div>
 
-    <div class="m-app-prompt__body">
-      <div class="m-app-prompt__body__logo-container">
+    <div class="m-appPrompt__body">
+      <div class="m-appPrompt__body__logoContainer">
         <img
-          class="m-app-prompt__body__logo"
+          class="m-appPrompt__body__logo"
           [src]="cdnAssetsUrl + 'assets/logos/bulb.svg'"
         />
       </div>
 
-      <span class="m-app-prompt__body__title">Minds</span>
+      <span class="m-appPrompt__body__title">Minds</span>
       <span
-        class="m-app-prompt__body__description"
+        class="m-appPrompt__body__description"
         i18n="@@HOMEPAGE__V2__TAKE_BACK_CONTROL_SUBHEADER"
       >
         Take back control of your social media!
       </span>
-      <span class="m-app-prompt__body__reviews"
+      <span class="m-appPrompt__body__reviews"
         >5 stars on 1,000,000+ reviews</span
       >
 
-      <div class="m-app-prompt__body__download-container">
+      <div class="m-appPrompt__body__downloadContainer">
         <a
           href="https://cdn-assets.minds.com/mobile/Minds-stable-4-17-0.apk"
           target="_blank"
