(fix) boosts rendering ux

--- a/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.html
+++ b/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.html
@@ -26,7 +26,8 @@
         [attr.data-minds-activity-guid]="entity.guid"
         [slot]="i + 1"
         [canRecordAnalytics]="false"
-        *ngIf="i === currentPosition"
+        [style.visibility]="i === currentPosition ? 'visible' : 'hidden'"
+        *ngIf="shouldRender(i)"
       ></m-activity>
     </ng-container>
     <div
