Single tx gc engine#2080

--- a/src/app/modules/admin/withdrawals/withdrawals.component.html
+++ b/src/app/modules/admin/withdrawals/withdrawals.component.html
@@ -199,6 +199,14 @@
             size="small"
             [saving]="inProgress"
             [disabled]="inProgress"
+            (onAction)="forceFail(request)"
+          >
+            Force Fail
+          </m-button>
+          <m-button
+            size="small"
+            [saving]="inProgress"
+            [disabled]="inProgress"
             (onAction)="forceConfirmation(request)"
           >
             Force Confirm
