--- a/src/app/modules/channels/v2/actions/menu.component.html
+++ b/src/app/modules/channels/v2/actions/menu.component.html
@@ -7,23 +7,25 @@
 
 <ng-template #actionsDropdown>
   <ul>
-    <li
-      *ngIf="service.isSubscribed$ | async; else subscribeOption"
-      (click)="unsubscribe()"
-    >
-      <span class="m-dropdownMenu__item">
-        <span i18n="@@COMMON__UNSUBSCRIBE">Unsubscribe</span>
-      </span>
-    </li>
-    <ng-template #subscribeOption>
-      <li (click)="subscribe()">
+    <ng-container *ngIf="!(service.isDisabled$ | async)">
+      <li
+        *ngIf="service.isSubscribed$ | async; else subscribeOption"
+        (click)="unsubscribe()"
+      >
         <span class="m-dropdownMenu__item">
-          <span i18n="@@COMMON__SUBSCRIBE">Subscribe</span>
+          <span i18n="@@COMMON__UNSUBSCRIBE">Unsubscribe</span>
         </span>
       </li>
-    </ng-template>
+      <ng-template #subscribeOption>
+        <li (click)="subscribe()">
+          <span class="m-dropdownMenu__item">
+            <span i18n="@@COMMON__SUBSCRIBE">Subscribe</span>
+          </span>
+        </li>
+      </ng-template>
+    </ng-container>
 
-    <!-- ******** admin block ******** -->
+    <!-- ******** admin ******************** -->
     <ng-container *ngIf="service.isAdmin$ | async">
       <li *ngIf="service.isBanned$ | async" (click)="unBan()">
         <span class="m-dropdownMenu__item">
@@ -111,6 +113,8 @@
       </li>
     </ng-container>
 
+    <!-- ******** end admin ******************** -->
+
     <li
       *ngIf="service.isBlocked$ | async; else blockOption"
       (click)="unblock()"
@@ -127,11 +131,13 @@
       </li>
     </ng-template>
 
-    <li (click)="report()">
-      <span class="m-dropdownMenu__item">
-        <span i18n="@@MINDS_BUTTON__USER_DROPDOWN__REPORT">Report</span>
-      </span>
-    </li>
+    <ng-container *ngIf="!(service.isDisabled$ | async)">
+      <li (click)="report()">
+        <span class="m-dropdownMenu__item">
+          <span i18n="@@MINDS_BUTTON__USER_DROPDOWN__REPORT">Report</span>
+        </span>
+      </li>
+    </ng-container>
   </ul>
 </ng-template>
 
