--- a/src/app/modules/comments/comment/comment.component.html
+++ b/src/app/modules/comments/comment/comment.component.html
@@ -103,12 +103,28 @@
       <span>This comment has been tagged as explicit</span>
       <span (click)="toggleMatureVisibility()">View comment</span>
     </div>
-    <div
-      class="m-comment__messageWrapper"
-      m-read-more
-      [maxHeightAllowed]="120"
-      *ngIf="!comment.mature || shouldShowMatureContent()"
-    >
+    <ng-container *ngIf="disableReadMore; else useReadMore">
+      <div
+        class="m-comment__messageWrapper"
+        *ngIf="!comment.mature || shouldShowMatureContent()"
+      >
+        <ng-container *ngTemplateOutlet="commentMessageContent"></ng-container>
+      </div>
+    </ng-container>
+    <ng-template #useReadMore>
+      <div
+        class="m-comment__messageWrapper"
+        m-read-more
+        [maxHeightAllowed]="120"
+        *ngIf="!comment.mature || shouldShowMatureContent()"
+      >
+        <ng-container *ngTemplateOutlet="commentMessageContent"></ng-container>
+
+        <m-read-more--button [v2]="true"></m-read-more--button>
+      </div>
+    </ng-template>
+
+    <ng-template #commentMessageContent>
       <p
         [hidden]="editing"
         class="m-comment__message m-mature-message-content"
@@ -116,9 +132,8 @@
         [ngClass]="{
           'm-mature-text': comment.mature && !shouldShowMatureContent()
         }"
-      ></p>
-      <m-read-more--button [v2]="true"></m-read-more--button>
-    </div>
+      ></p
+    ></ng-template>
     <m-translate
       [open]="translateToggle"
       [entity]="comment"
