--- a/src/app/modules/wallet/components/tokens/skale/skale.component.html
+++ b/src/app/modules/wallet/components/tokens/skale/skale.component.html
@@ -1,16 +1,39 @@
-<h6>
-  MINDS <=> skMINDS Bridge
-</h6>
+<div class="m-skale__body">
+  <h6>
+    SKALE Bridge
+  </h6>
 
-<span>MINDS: {{ mindsTokenBalance ?? '...'}} </span>
-<input
-  type="number"
-  class="m-input"
-  [(ngModel)]="amount"
-  placeholder="Enter amount"
-/>
-<m-button (onAction)="approve()">Approve</m-button>
-<m-button (onAction)="deposit()">Deposit</m-button>
-<m-button (onAction)="withdraw()">Withdraw</m-button>
-<m-button (onAction)="switchNetworkSkale()">Connect SKALE</m-button>
-<m-button (onAction)="switchNetworkRinkeby()">Connect Rinkeby</m-button>
+  <div class="m-skale__tokenConverter">
+    <div class="m-skale__inputAmountContainer">
+      <span>{{ inputCurrency }}</span>
+      <input
+        type="number"
+        class="m-input"
+        [(ngModel)]="amount"
+        placeholder="Enter amount"
+        min="0"
+      />
+      <span
+        >Available: {{ (balance?.amount | number) ?? '0'}}
+        {{ balance.currency }}</span
+      >
+    </div>
+    <span
+      class="material-icons m-skale__swapButton"
+      (click)="swapCurrencyFields()"
+    >
+      swap_vert
+    </span>
+    <div class="m-skale__outputAmount">{{ amount }} {{ ouputCurrency }}</div>
+    <div class="m-skale__buttonContainer">
+      <m-button color="primary" (onAction)="approve()">Approve</m-button>
+      <m-button color="primary" (onAction)="transfer()">Transfer</m-button>
+    </div>
+  </div>
+
+  <div class="m-skale__networkSwapButtonContainer">
+    <h6>Dev tools</h6>
+    <m-button (onAction)="switchNetworkSkale()">Connect SKALE</m-button>
+    <m-button (onAction)="switchNetworkRinkeby()">Connect Rinkeby</m-button>
+  </div>
+</div>
