Revert "Merge branch 'chore/mobile-hardcode-release' into 'master'"
This reverts merge request !1607

--- a/src/app/modules/mobile/marketing/marketing.component.html
+++ b/src/app/modules/mobile/marketing/marketing.component.html
@@ -26,9 +26,7 @@
         </div>
 
         <div class="m-marketing__gridItemActions">
-          <a
-            href="https://cdn-assets.minds.com/mobile/Minds-stable-4-17-0.apk"
-            target="_blank"
+          <a [href]="latestRelease.href" target="_blank"
             ><img
               src="{{ cdnAssetsUrl }}assets/marketing/mobile/download-minds.svg"
               height="40"
