Reverse comment ordering

--- a/src/app/common/components/publisher-card/publisher-card.component.ng.scss
+++ b/src/app/common/components/publisher-card/publisher-card.component.ng.scss
@@ -231,6 +231,10 @@
           margin-left: 0px;
         }
       }
+
+      m-channel--badges i {
+        font-size: 20px;
+      }
     }
     .m-publisherCard__subs {
       justify-content: center;
