--- a/src/app/modules/newsfeed/activity/boost-button/boost-button.html
+++ b/src/app/modules/newsfeed/activity/boost-button/boost-button.html
@@ -3,7 +3,8 @@
   [anchor]="'bottom'"
   [enabled]="false"
   [hidden]="!shouldShowTooltip"
-  [showArrow]="true">
+  [showArrow]="true"
+>
   <button
     m-tooltip--anchor
     class="m-btn m-btn--slim m-boostButton"
@@ -12,9 +13,12 @@
     <span
       [class.m-animation__shimmer--text]="shouldShowBoost"
       i18n="verb|@@M__ACTION__BOOST"
-    >Boost</span>
+      >Boost</span
+    >
     <m-icon from="md" iconId="trending_up" [sizeFactor]="20"></m-icon>
   </button>
 
-  <ng-container i18n="@@M__ACTION__BOOST__TOOLTIP">Use your tokens to get more views</ng-container>
+  <ng-container i18n="@@M__ACTION__BOOST__TOOLTIP"
+    >Use your tokens to get more views</ng-container
+  >
 </m-tooltip>
