--- a/src/app/modules/wallet/components/tokens/skale/skale.component.ng.scss
+++ b/src/app/modules/wallet/components/tokens/skale/skale.component.ng.scss
@@ -34,6 +34,7 @@
         cursor: pointer;
         padding: 10px;
         border-radius: 25px;
+        margin-top: 20px;
 
         @include m-theme() {
           background: themed($m-bgColor--primary);
