Back to default darkmode

--- a/src/app/modules/auth/forgot-password/forgot-password.component.scss
+++ b/src/app/modules/auth/forgot-password/forgot-password.component.scss
@@ -47,9 +47,12 @@ m-forgot-password {
     .m-forgot-password__modal {
       padding: 86px 67px 150px;
       display: block;
-      background-color: #fcfcfc;
       -webkit-clip-path: polygon(0 2%, 100% 0, 100% 97%, 0 95%);
       clip-path: polygon(0 2%, 100% 0, 100% 97%, 0 95%);
+
+      @include m-theme() {
+        background-color: themed($m-bgColor--secondary);
+      }
 
       @media screen and (max-width: $m-grid-max-mobile) {
         clip-path: polygon(0 2%, 100% 0, 100% 100%, 0 99%);
