Adding in base for future build your algorithm section.

--- a/src/app/modules/discovery/trends/trends.component.html
+++ b/src/app/modules/discovery/trends/trends.component.html
@@ -7,6 +7,8 @@
   @fastFade
 ></m-discovery__noTagsPrompt>
 
+<m-discovery__buildYourAlgorithm> </m-discovery__buildYourAlgorithm>
+
 <ul
   class="m-discovery__trends"
   @fastFade
