--- a/src/stylesheets/defaults.scss
+++ b/src/stylesheets/defaults.scss
@@ -115,3 +115,10 @@ $layout-sidebar-width: 80px;
     }
   }
 }
+
+@mixin unselectable {
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
+}
