--- a/src/stylesheets/themes.scss
+++ b/src/stylesheets/themes.scss
@@ -101,6 +101,7 @@ $themes: (
     m-bgColor--secondaryAlt: #e6ebed,
     m-bgColor--contrast: #d8d8d8,
     m-bgColor--btnHover: #f0f3f7,
+    m-bgColor--btnHoverLightAlways: #f0f3f7,
     m-bgColor--btnActive: #dadfe5,
     m-borderColor--primary: #d3dbe3,
     m-borderColor--secondary: #979797,
@@ -177,6 +178,7 @@ $themes: (
     m-bgColor--secondaryAlt: #232b31,
     m-bgColor--contrast: #d8d8d8,
     m-bgColor--btnHover: #343c44,
+    m-bgColor--btnHoverLightAlways: #f0f3f7,
     m-bgColor--btnActive: #48525b,
     m-borderColor--primary: #414c57,
     m-borderColor--secondary: #979797,
@@ -314,6 +316,7 @@ $m-bgColor--secondary: 'm-bgColor--secondary';
 $m-bgColor--secondaryAlt: 'm-bgColor--secondaryAlt';
 $m-bgColor--contrast: 'm-bgColor--contrast';
 $m-bgColor--btnHover: 'm-bgColor--btnHover';
+$m-bgColor--btnHoverLightAlways: 'm-bgColor--btnHoverLightAlways';
 $m-bgColor--btnActive: 'm-bgColor--btnActive';
 $m-borderColor--primary: 'm-borderColor--primary';
 $m-borderColor--secondary: 'm-borderColor--secondary';
