--- a/src/app/modules/embed/embed.html
+++ b/src/app/modules/embed/embed.html
@@ -37,7 +37,7 @@
     </style>
   </head>
   <body class="m-theme__light">
-    <m-app></m-app>
+    <m-embed></m-embed>
 
     <script>
       function module() {} // Fixes undefined module function in SystemJS bundle
