--- a/src/app/modules/blogs/v2/edit/ckeditor/editor.component.html
+++ b/src/app/modules/blogs/v2/edit/ckeditor/editor.component.html
@@ -4,7 +4,7 @@
     [ngModel]="content"
     (ngModelChange)="onContentChanged($event)"
     [editor]="Editor"
-    [config]="editorConfig"
+    [config]="editorConfig$ | async"
     data-cy="data-minds-ckeditor-input"
   ></ckeditor>
 </div>
