Various updates and working with pay modal

--- a/src/app/modules/wire/v2/creator/form/form.component.html
+++ b/src/app/modules/wire/v2/creator/form/form.component.html
@@ -266,6 +266,19 @@
               >Off-chain</span
             >
           </div>
+
+          <div
+            class="m-wireCreatorForm__field m-wireCreatorForm__networkSelect"
+            *ngIf="(service.tokenType$ | async) === 'onchain'"
+          >
+            <select
+              [ngModel]="service.onchainNetwork$ | async"
+              (ngModelChange)="this.service.setOnchainNetwork($event)"
+            >
+              <option selected value="mainnet">Mainnet</option>
+              <option value="skale">SKALE</option>
+            </select>
+          </div>
         </div>
         <!-- </ng-container> -->
 
