--- a/src/app/modules/wire/v2/creator/form/form.component.ng.scss
+++ b/src/app/modules/wire/v2/creator/form/form.component.ng.scss
@@ -55,6 +55,15 @@
           margin-right: 0;
         }
       }
+
+      .m-wireCreatorForm__networkSelect {
+        width: 100%;
+
+        select {
+          width: 100%;
+          margin-top: 20px;
+        }
+      }
     }
 
     @media screen and (max-width: $max-mobile) {
