--- a/src/app/common/components/status-toaster/status-toaster.component.ng.scss
+++ b/src/app/common/components/status-toaster/status-toaster.component.ng.scss
@@ -87,7 +87,7 @@
   }
   .m-statusToastDetails__desc {
     font-size: 15px;
-    line-height: 17px;
+    line-height: 18px !important;
     margin-bottom: 10px !important;
   }
   .m-statusToastDetails__updated {
