Minor copy change

--- a/src/app/common/components/status-toaster/status-toaster.component.html
+++ b/src/app/common/components/status-toaster/status-toaster.component.html
@@ -33,7 +33,7 @@
             {{ formatTimestamp(toast.incident.updated_at) }}</ng-container
           >
           <ng-container *ngIf="toast.resolved"
-            >Resolved at{{ getResolvedTime() }}</ng-container
+            >Resolved {{ getResolvedTime() }}</ng-container
           >
         </p>
         <p class="m-statusToastDetails__link">
