don't show newfeed entity border for wire notifs

--- a/src/app/modules/notifications/v3/notification.component.html
+++ b/src/app/modules/notifications/v3/notification.component.html
@@ -86,7 +86,7 @@
       ></m-comment>
 
       <m-newsfeed__entity
-        *ngIf="entity && entity?.type !== 'comment' && entity?.type !== 'user'"
+        *ngIf="showNewsfeedEntity"
         [entity]="entity"
         [displayOptions]="{
           minimalMode: true,
