Fix issues with anonymous experiments and main logo redirection

--- a/src/app/common/layout/v3-topbar/v3-topbar.component.html
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.html
@@ -20,7 +20,7 @@
       <nav class="m-v3Topbar__nav">
         <a
           class="m-v3TopbarNav__item m-v3TopbarNav__item--logo"
-          routerLink="/"
+          [routerLink]="getMainLogoUrl()"
           title="Home"
           i18n-title="@@COMMON__HOME"
         >
