--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -382,7 +382,7 @@
               <ng-container i18n="@@COMMON__MORE">More</ng-container>
             </m-tooltip>
 
-            <span class="m-sidebarNavigationItem__text" i18n="@@COMMON__EARN"
+            <span class="m-sidebarNavigationItem__text" i18n="@@COMMON__MORE"
               >More</span
             >
           </a>
