--- a/src/app/common/layout/v3-topbar/user-menu/user-menu.component.scss
+++ b/src/app/common/layout/v3-topbar/user-menu/user-menu.component.scss
@@ -44,7 +44,7 @@ m-usermenu__v3 {
           }
         }
 
-        &:not(.m-userMenuDropdown__username):not(.m-userMenuDropdown__spacer):not(.m-userMenuDropdown__footer):hover {
+        &:not(.m-userMenuDropdown__spacer):not(.m-userMenuDropdown__footer):hover {
           @include m-theme() {
             background-color: themed($m-bgColor--secondaryAlt);
             color: themed($m-textColor--primary);
@@ -52,13 +52,14 @@ m-usermenu__v3 {
         }
 
         &.m-userMenuDropdown__username {
-          padding-top: 26px;
+          margin-top: 18px;
+          padding-top: 8px;
           padding-bottom: 8px;
 
           overflow-x: hidden;
           position: relative;
 
-          &:after {
+          &:not(:hover):after {
             position: absolute;
             display: block;
             content: '';
