Background color fix for mfa input modal dark mode

--- a/src/app/modules/auth/multi-factor-auth/panels/mfa-panel.component.ng.scss
+++ b/src/app/modules/auth/multi-factor-auth/panels/mfa-panel.component.ng.scss
@@ -40,6 +40,7 @@
       padding: 10px;
 
       @include m-theme() {
+        background-color: themed($m-bgColor--primary);
         color: themed($m-textColor--primary);
         border: 1px solid themed($m-borderColor--primary);
       }
