Remove failing i18n tag

--- a/src/app/modules/governance/filter-selector/filter-selector.component.html
+++ b/src/app/modules/governance/filter-selector/filter-selector.component.html
@@ -1,6 +1,6 @@
 <div class="m-governance-filter-container">
   <m-dropdown #dropdown>
-    <label i18n="@@HELPDESK__EDIT__CATEGORIES__TITLE">
+    <label>
       {{ filter === '' ? 'All' : filter }} 
       <span>outcomes</span>
       <m-icon
