--- a/src/app/modules/discovery/tabs/tabs.component.html
+++ b/src/app/modules/discovery/tabs/tabs.component.html
@@ -46,20 +46,49 @@
         >Boosted</a
       >
     </div>
-    <div class="m-layout__spacer"></div>
-    <m-discovery__settingsButton modalType="tags"></m-discovery__settingsButton>
   </ng-container>
   <!-- MINDS+ TABS -------------------------------->
   <ng-template #plusTabs>
     <div class="m-tabs__tab">
       <a
+        *mIfFeature="'!plus-discovery-filter'"
         routerLink="/discovery/plus/overview"
         routerLinkActive="m-tabs__tab--selected"
         data-cy="discovery-tab-link-plus-overview"
-        i18n="@@DISCOVERY_TABS__OVERVIEW"
+        i18n="@@DISCOVERY_TAGS__OVERVIEW"
         >Overview</a
       >
     </div>
+    <ng-container *mIfFeature="'plus-discovery-filter'">
+      <div class="m-tabs__tab">
+        <a
+          routerLink="/discovery/plus/overview"
+          routerLinkActive="m-tabs__tab--selected"
+          data-cy="discovery-tab-link-plus-overview"
+          i18n="@@DISCOVERY_TAGS__JUST_FOR_YOU"
+          >Just for you</a
+        >
+      </div>
+      <div class="m-tabs__tab">
+        <a
+          routerLink="/discovery/plus/tags/your"
+          routerLinkActive="m-tabs__tab--selected"
+          data-cy="discovery-tab-link-tags"
+          i18n="@@DISCOVERY_TAGS__YOUR_TAGS"
+          >Your tags</a
+        >
+      </div>
+      <div class="m-tabs__tab">
+        <a
+          routerLink="/discovery/plus/tags/trending"
+          routerLinkActive="m-tabs__tab--selected"
+          data-cy="discovery-tab-link-trending"
+          i18n="@@DISCOVERY_TAGS__TRENDING"
+          >Trending</a
+        >
+      </div>
+    </ng-container>
+
     <div class="m-tabs__tab">
       <a
         routerLink="/discovery/plus/latest/feed"
@@ -70,4 +99,7 @@
       >
     </div>
   </ng-template>
+  <!-- SETTINGS COG -------------------------------->
+  <div class="m-layout__spacer"></div>
+  <m-discovery__settingsButton modalType="tags"></m-discovery__settingsButton>
 </div>
