Change helpdesk links to _blank targets

--- a/src/app/common/layout/v3-topbar/user-menu/user-menu.component.html
+++ b/src/app/common/layout/v3-topbar/user-menu/user-menu.component.html
@@ -114,7 +114,7 @@
     >
       <!--Endpoint handles authentication and redirection-->
       <ng-container *mIfFeature="'helpdesk-2021'; else helpdeskLink">
-        <a href="/api/v3/helpdesk/zendesk">
+        <a href="/api/v3/helpdesk/zendesk" target="_blank">
           <span i18n="@@COMMON__HELP">Help</span>
         </a>
       </ng-container>
