--- a/src/app/common/components/button/button.component.html
+++ b/src/app/common/components/button/button.component.html
@@ -3,22 +3,8 @@
   (click)="emitAction($event)"
   [type]="type"
   [disabled]="disabled"
-  [ngClass]="{
-    'm-button--saving': _saving,
-    'm-button--grey': color === 'grey',
-    'm-button--blue': color === 'blue',
-    'm-button--red': color === 'red',
-    'm-button--primary': color === 'primary',
-    'm-button--secondary': color === 'secondary',
-    'm-button--xsmall': size === 'xsmall',
-    'm-button--small': size === 'small',
-    'm-button--medium': size === 'medium',
-    'm-button--large': size === 'large',
-    'm-button--overlay': overlay,
-    'm-button--iconOnly': iconOnly,
-    'm-button--dropdown': !!dropdown && showDropdownMenu,
-    'm-pulsating--small': pulsating
-  }"
+  [ngClass]="getClass()"
+  *ngIf="!href"
 >
   <div *ngIf="!_saving" class="m-button__text--unsaved" #buttonTextContainer>
     <ng-content></ng-content>
@@ -46,3 +32,12 @@
     <m-icon from="ion" iconId="arrow-down-b"></m-icon>
   </m-dropdownMenu>
 </button>
+
+<a
+  class="m-button"
+  [attr.href]="disabled ? undefined : href"
+  [ngClass]="getClass()"
+  *ngIf="href"
+>
+  <ng-content></ng-content>
+</a>
